--- a/libManagement/libManagement.csproj
+++ b/libManagement/libManagement.csproj
@@ -46,6 +46,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Business_Layer\LOGIN_CLASS.cs" />
+    <Compile Include="Data_Access_Layer\DataAccessLayer.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
