--- a/libManagement/libManagement.csproj
+++ b/libManagement/libManagement.csproj
@@ -79,6 +79,12 @@
     <Compile Include="PL\home_page.Designer.cs">
       <DependentUpon>home_page.cs</DependentUpon>
     </Compile>
+    <Compile Include="PL\Shilfs.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PL\Shilfs.Designer.cs">
+      <DependentUpon>Shilfs.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
@@ -95,6 +101,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="PL\home_page.resx">
       <DependentUpon>home_page.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PL\Shilfs.resx">
+      <DependentUpon>Shilfs.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
