--- a/libManagement/libManagement.csproj
+++ b/libManagement/libManagement.csproj
@@ -67,6 +67,12 @@
     <Compile Include="mainPage\mainpage.Designer.cs">
       <DependentUpon>mainpage.cs</DependentUpon>
     </Compile>
+    <Compile Include="PL\Books.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PL\Books.Designer.cs">
+      <DependentUpon>Books.cs</DependentUpon>
+    </Compile>
     <Compile Include="PL\Departments.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -95,6 +101,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="mainPage\mainpage.resx">
       <DependentUpon>mainpage.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PL\Books.resx">
+      <DependentUpon>Books.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="PL\Departments.resx">
       <DependentUpon>Departments.cs</DependentUpon>
